--- a/Client/src/pages/Home/home.css
+++ b/Client/src/pages/Home/home.css
@@ -3,20 +3,20 @@
 }
 
 .lighter {
-  background: #E6E6E6 !important;
+  background: #e6e6e6 !important;
 }
 
 .light {
-  background: #D9D9D9 !important;
+  background: #d9d9d9 !important;
 }
 
 .post {
-  background-color: #B3B3B3 !important;
+  background-color: #b3b3b3 !important;
 }
 
 .comment {
   border: 0;
-  background-color: #BBBBBB !important;
+  background-color: #bbbbbb !important;
 }
 
 .f-400 {
@@ -31,7 +31,6 @@
   font-weight: 600;
 }
 
-
 .flip {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
@@ -39,7 +38,7 @@
 
 .avatar {
   border-radius: 50%;
-  background: #D9D9D9;
+  background: #d9d9d9;
 }
 
 .s18 {
@@ -77,18 +76,18 @@ hr.white {
 }
 
 .content {
-  background: #D9D9D9;
-  border: 1px solid #B3B3B3;
+  background: #d9d9d9;
+  border: 1px solid #b3b3b3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 13px;
 }
 
 .content-border-s {
-  border: 1px solid #B3B3B3 !important;
+  border: 1px solid #b3b3b3 !important;
 }
 
 .content-border-l {
-  border: 2px solid #C4C4C4 !important;
+  border: 2px solid #c4c4c4 !important;
 }
 
 .round-xl {
@@ -103,3 +102,7 @@ hr.white {
   border-radius: 9px !important;
 }
 
+.btn-layer:hover {
+  background-color: #f4f2f2;
+  cursor: pointer;
+}
